--- a/auction_site/Gemfile
+++ b/auction_site/Gemfile
@@ -1,17 +1,18 @@
 source 'https://rubygems.org'
 
-gem 'rails', '4.2.3'
+gem 'rails', 										'4.2.3'
 gem 'sqlite3'
 gem 'will_paginate',            '3.0.7'
 gem 'bootstrap-will_paginate',  '0.0.10'
 gem 'bootstrap-sass',						'3.2.0.0'
-gem 'sass-rails', '~> 5.0'
-gem 'uglifier', '>= 1.3.0'
+gem 'sass-rails', 							'~> 5.0'
+gem 'faker',										'1.4.2'
+gem 'uglifier',									'>= 1.3.0'
 gem 'jquery-rails'
 gem 'turbolinks'
-gem 'jbuilder', '~> 2.0'
-gem 'sdoc', '~> 0.4.0', group: :doc
-gem 'bcrypt', '~> 3.1.7'
+gem 'jbuilder', 								'~> 2.0'
+gem 'sdoc', 										'~> 0.4.0', group: :doc
+gem 'bcrypt', 									'~> 3.1.7'
 
 group :development, :test do
 	gem 'awesome_print'
